--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -1,8 +1,7 @@
-<ul>
-    <li class="p-4 my-2 border rounded" [routerLink]="['/admindepartment']">
-        Departments
-    </li>
-    <li class="p-4 my-2 border roundedv " [routerLink]="['/adminproduct']">
-        Products
-    </li>
-</ul>
+<div>
+    <ul>
+        <li class="rounded shadow" id="items" [routerLink]="['/admin']">Home</li>
+        <li class="rounded shadow" id="items" [routerLink]="['/admin/department']">Departments</li>
+        <li class="rounded shadow" id="items" [routerLink]="['/admin/product']">Products</li>
+    </ul>
+</div>
