--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,11 +1,14 @@
 <div class="container-fluid">
-    <div class="row justify-content-center p-3">
-        <div class="col-lg-2 border">
+    <div class="row px-4">
+        <div class="col-lg-2 px-3">
             <app-menu></app-menu>
         </div>
         <div class="col-lg-10">
-            <div class="border p-4">
-
+            <div class="btn-light p-2">
+                <h5 class="text-center m-0">Today</h5>
+            </div>
+            <div class="btn-light p-2 mt-4">
+                <h5 class="text-center m-0">Overall</h5>
             </div>
         </div>
     </div>
