--- a/src/app/admin/menu/menu.component.css
+++ b/src/app/admin/menu/menu.component.css
@@ -1,10 +1,19 @@
-li{
-    list-style-type: none;
+#items{
     text-align: center;
-    background-color: rgb(64, 187, 64);
-    color: white;
-
+    list-style-type: none;
+    
+    margin: 10px;
+    padding: 15px 10px;
+    cursor: pointer;
 }
+
+#items:hover{
+    transform: scale(1.1);
+    transition: transform .5s;
+    background-color: rgb(36, 182, 36);
+    color: white;
+}
+
 ul{
     padding: 0px;
 }
