--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
 
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand" href="#">Winkart</a>
+    <a class="navbar-brand" [routerLink]="['']">Winkart</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
