--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,6 +11,9 @@
                     </div>
                 </div>
 
+                <div class="row justify-content-center mt-4">
+                    <img  src="./assets/images/user.png" width="120px">
+                </div>
 
                 <div class="p-4">
 
