--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,7 +11,9 @@
                     </div>
                 </div>
 
-                <div class="row justify-content-center mt-2">
+                <p class="text-danger text-center mt-3">{{loginError}}</p>
+
+                <div class="row justify-content-center ">
                     <img class="mt-4" src="./assets/images/user.png" width="120px">
                 </div>
 
