--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -11,6 +11,10 @@
                     </div>
                 </div>
 
+                <p class="mt-2 text-danger text-center">
+                    {{signupError}}
+                </p>
+
                 <div class="row justify-content-center mt-4">
                     <img  src="./assets/images/user.png" width="120px">
                 </div>
@@ -64,7 +68,7 @@
                             </small>
                         </div>
                         <div class="form-group">
-                            <button [disabled]="signupForm.invalid" class="btn btn-primary float-right mb-3">Login</button>
+                            <button [disabled]="signupForm.invalid" class="btn btn-primary float-right mb-3">SignUp</button>
                         </div>
                     </form>
 
